@@ -30,14 +30,23 @@
 
 package bibliothek.gui.dock.toolbar;
 
+import java.awt.Component;
+
+import bibliothek.gui.dock.ToolbarItem;
 import bibliothek.gui.dock.common.CStation;
 import bibliothek.gui.dock.common.SingleCDockable;
+import bibliothek.gui.dock.common.action.CAction;
 import bibliothek.gui.dock.common.intern.AbstractCDockable;
-import bibliothek.gui.dock.common.intern.CommonDockable;
+import bibliothek.gui.dock.toolbar.expand.ExpandedState;
 import bibliothek.gui.dock.toolbar.intern.CommonToolbarItemDockable;
 
 /**
- * A {@link CToolbarItem} is an item (e.g. a button) that is shown in a toolbar.
+ * A {@link CToolbarItem} is an item (e.g. a button) that is shown in a toolbar.<br>
+ * In reality the {@link CToolbarItem} consists of several {@link Component}s, but only one of them is shown. Which
+ * one depends on the {@link ExpandedState} which is set by the toolbar itself. In order to use this feature clients
+ * have to call 
+ * <code>CControl control = ...
+ * control.putProperty( ExpandableToolbarItemStrategy.STRATEGY, new DefaultExpandableToolbarItemStrategy() );</code>
  * @author Benjamin Sigg
  */
 public class CToolbarItem extends AbstractCDockable implements SingleCDockable{
@@ -52,6 +61,54 @@ public class CToolbarItem extends AbstractCDockable implements SingleCDockable{
 			throw new IllegalArgumentException( "id must not be null" );
 		}
 		this.id = id;
+	}
+
+	/**
+	 * Sets a component which should be shown when this dockable is in state {@link ExpandedState#SHRUNK}.
+	 * @param item the item to show, can be <code>null</code>
+	 */
+	public void setItem( CAction item ){
+		setItem( item, ExpandedState.SHRUNK );
+	}
+	
+	/**
+	 * Sets a component which should be shown when this dockable is in state {@link ExpandedState#SHRUNK}.
+	 * @param item the item to show, can be <code>null</code>
+	 */
+	public void setItem( Component item ){
+		setItem( item, ExpandedState.SHRUNK );
+	}
+	
+	/**
+	 * Sets a component which should be shown when this dockable is in state <code>state</code>.
+	 * @param item the item to show, can be <code>null</code>
+	 * @param state the state when to show <code>item</code>
+	 */
+	public void setItem( Component item, ExpandedState state ){
+		intern().setComponent( item, state );
+	}
+
+	/**
+	 * Sets a component which should be shown when this dockable is in state <code>state</code>.
+	 * @param item the item to show, can be <code>null</code>
+	 * @param state the state when to show <code>item</code>
+	 */
+	public void setItem( CAction item, ExpandedState state ){
+		if( item == null ){
+			setItem( (ToolbarItem)null, state );
+		}
+		else{
+			intern().setAction( item.intern(), state );
+		}
+	}
+	
+	/**
+	 * Sets a component which should be shown when this dockable is in state <code>state</code>.
+	 * @param item the item to show, can be <code>null</code>
+	 * @param state the state when to show <code>item</code>
+	 */
+	public void setItem( ToolbarItem item, ExpandedState state ){
+		intern().setItem( item, state );
 	}
 	
 	@Override
